--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
                                     alt="Figura coleccionable de Funko de Stormtrooper">
                                 <span class="span_nuevo">Nuevo</span>
                             </picture>
+
                             <div class="ultimos_lanzamientos_text">
                                 <p>STAR WARS</p>
                                 <h4>STORMTROOPER LIGHTSABER</h4>
                                 <p>$ 1799,99</p>
                                 <p class="cuotas_sin_interes">3 CUOTAS SIN INTERÉS</p>
                             </div>
-                            </div>
                         </a>
+                        <img class="flecha_izquierda" src="./images/icons/Left Vector 1 (Stroke).png">
                     </article>
                 </li>
                 <li>
@@ -155,6 +156,7 @@
                             </div>
                             </div>
                         </a>
+                        <img class="flecha_derecha" src="./images/icons/Right Vector 1 (Stroke).png">
                     </article>
                 </li>
             </ul>
