--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- HEADER -->
     <header>
-        <nav class="nav_header">
+        <nav id="nav_header" class="nav_header">
             <picture>
                 <a href="./index.html">
                     <img src="./images/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
@@ -106,7 +106,7 @@
             <ul>
                 <li>
                     <article>
-                        <a href="javascript:void(0)">
+                        <a href="./pages/item.html">
                             <picture>
                                 <img src="./images/star-wars/trooper-1.webp"
                                     alt="Figura coleccionable de Funko de Stormtrooper">
@@ -120,12 +120,14 @@
                                 <p class="cuotas_sin_interes">3 CUOTAS SIN INTERÉS</p>
                             </div>
                         </a>
-                        <img class="flecha_izquierda" src="./images/icons/Left Vector 1 (Stroke).png">
+                        <a href="javascript:void(0)">
+                            <img class="flecha flecha_izquierda" src="./images/icons/Left Vector 1 (Stroke).png">
+                        </a>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <a href="javascript:void(0)">
+                        <a href="./pages/item.html">
                             <picture>
                                 <img src="./images/pokemon/pidgeotto-1.webp"
                                     alt="Figura coleccionable de Funko de Pidgeotto">
@@ -142,7 +144,7 @@
                 </li>
                 <li>
                     <article>
-                        <a href="javascript:void(0)">
+                        <a href="./pages/item.html">
                             <picture>
                                 <img src="./images/harry-potter/luna-1.webp"
                                     alt="Figura coleccionable de Funko de Luna Lovegood">
@@ -156,7 +158,9 @@
                             </div>
                             </div>
                         </a>
-                        <img class="flecha_derecha" src="./images/icons/Right Vector 1 (Stroke).png">
+                        <a href="javascript:void(0)">
+                            <img class="flecha flecha_derecha" src="./images/icons/Right Vector 1 (Stroke).png">
+                        </a>
                     </article>
                 </li>
             </ul>
@@ -185,7 +189,7 @@
                     </li>
                 </ul>
                 <picture>
-                    <a href="./">
+                    <a href="#nav_header">
                         <img src="./images/branding/isotype.svg" alt="Isologotipo de la marca Funkoshop">
                     </a>
                 </picture>
