--- a/pages/admin.html
+++ b/pages/admin.html
@@ -40,7 +40,7 @@
     <!-- MAIN -->
 
     <main class="container">
-        <h1>SHOP</h1>
+        <h1>ADMIN</h1>
     </main>
 
     <!-- FOOTER -->
