--- a/pages/create.html
+++ b/pages/create.html
@@ -40,7 +40,7 @@
     <!-- MAIN -->
 
     <main class="container">
-        <h1>SHOP</h1>
+        <h1>CREATE</h1>
     </main>
 
     <!-- FOOTER -->
