[FEAT] Server init and static folder

--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Funkoshop</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <!-- <link rel="stylesheet" href="../css/index.css"> -->
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     <!-- MAIN -->
 
     <main class="container">
-        <h1>ITEM</h1>
+        <h1>ADMIN</h1>
     </main>
 
     <!-- FOOTER -->
