--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Funkoshop</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
-
 <body>
-
     <!-- HEADER -->
-
     <header>
         <nav id="nav_header" class="nav_header">
             <picture>
                 <a href="./index.html">
-                    <img src="./images/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
+                    <img src="./images/branding/logo_light_horizontal.svg"
+                        alt="Isologotipo de la marca Funkoshop">
                 </a>
             </picture>
             <ul class="ul_nav_header">
@@ -31,15 +28,14 @@
                 </li>
                 <li>
                     <a href="./pages/cart.html">
-                        <img src="./images/icons/cart-icon.svg" alt="ícono de carrito">
+                        <img src="./images/icons/cart-icon.svg"
+                            alt="ícono de carrito">
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-
     <!-- HERO -->
-
     <section class="hero_section_funkos_header">
         <article>
             <h3>Nuevos Ingresos</h3>
@@ -49,19 +45,15 @@
             </button>
         </article>
     </section>
-
     <!-- MAIN -->
-
     <main class="container">
-
         <section class="funkos">
-
             <!-- FUNKOS -->
-
             <section>
                 <article>
                     <h3>STAR WARS & <br> THE MANDOLORIAN</h3>
-                    <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
+                    <p>Disfruta de una saga que sigue agregando personajes a su
+                        colección.</p>
                     <hr class="article_hr_red">
                     <button class="button_ver_coleccion">
                         <a href="./pages/shop.html">VER COLECCIÓN</a>
@@ -75,7 +67,8 @@
             <section>
                 <article>
                     <h3>POKEMON INDIGO</h3>
-                    <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
+                    <p>Atrapa todos los que puedas y disfruta de una colección
+                        llena de amigos.</p>
                     <hr class="article_hr_red">
                     <button class="button_ver_coleccion">
                         <a href="./pages/shop.html">VER COLECCIÓN</a>
@@ -89,7 +82,8 @@
             <section>
                 <article>
                     <h3>HARRY POTTER</h3>
-                    <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
+                    <p>Revive los recuerdos de una saga llena de magia y
+                        encanto.</p>
                     <hr class="article_hr_red">
                     <button class="button_ver_coleccion">
                         <a href="./pages/shop.html">VER COLECCIÓN</a>
@@ -101,9 +95,7 @@
                 </picture>
             </section>
         </section>
-
         <!-- ULTIMOS LANZAMIENTOS -->
-
         <section class="ultimos_lanzamientos">
             <h2>ÚLTIMOS LANZAMIENTOS</h2>
             <ul>
@@ -115,16 +107,17 @@
                                     alt="Figura coleccionable de Funko de Stormtrooper">
                                 <span class="span_nuevo">Nuevo</span>
                             </picture>
-
                             <div class="ultimos_lanzamientos_text">
                                 <p>STAR WARS</p>
                                 <h4>STORMTROOPER LIGHTSABER</h4>
                                 <p>$ 1799,99</p>
-                                <p class="cuotas_sin_interes">3 CUOTAS SIN INTERÉS</p>
+                                <p class="cuotas_sin_interes">3 CUOTAS SIN
+                                    INTERÉS</p>
                             </div>
                         </a>
                         <a href="javascript:void(0)">
-                            <img class="flecha flecha_izquierda" src="./images/icons/Left Vector 1 (Stroke).png">
+                            <img class="flecha flecha_izquierda"
+                                src="./images/icons/Left Vector 1 (Stroke).png">
                         </a>
                     </article>
                 </li>
@@ -140,7 +133,8 @@
                                 <p>POKEMON</p>
                                 <h4>PIDGEOTTO</h4>
                                 <p>$ 1799,99</p>
-                                <p class="cuotas_sin_interes">3 CUOTAS SIN INTERÉS</p>
+                                <p class="cuotas_sin_interes">3 CUOTAS SIN
+                                    INTERÉS</p>
                             </div>
                         </a>
                     </article>
@@ -157,50 +151,44 @@
                                 <p>HARRY POTTER</p>
                                 <h4>LUNA LOVEGOOD LION MASK</h4>
                                 <p>$ 1799,99</p>
-                                <p class="cuotas_sin_interes">3 CUOTAS SIN INTERÉS</p>
+                                <p class="cuotas_sin_interes">3 CUOTAS SIN
+                                    INTERÉS</p>
                             </div>
                             </div>
                         </a>
                         <a href="javascript:void(0)">
-                            <img class="flecha flecha_derecha" src="./images/icons/Right Vector 1 (Stroke).png">
+                            <img class="flecha flecha_derecha"
+                                src="./images/icons/Right Vector 1 (Stroke).png">
                         </a>
                     </article>
                 </li>
             </ul>
-
         </section>
-
     </main>
-
     <!-- FOOTER -->
-
     <footer>
         <section class="section_footer">
             <nav>
                 <ul class="ul_nav_section_footer">
                     <li>
-
                         <a href="./pages/shop.html">Shop</a>
                     </li>
                     <li>
-
                         <a href="./pages/login.html">Ingresar</a>
                     </li>
                     <li>
-
                         <a href="./pages/contact.html">Contacto</a>
                     </li>
                 </ul>
                 <picture>
                     <a href="#nav_header">
-                        <img src="./images/branding/isotype.svg" alt="Isologotipo de la marca Funkoshop">
+                        <img src="./images/branding/isotype.svg"
+                            alt="Isologotipo de la marca Funkoshop">
                     </a>
                 </picture>
             </nav>
         </section>
         <p class="p_footer">All rights reserved 2023 - Funkoshop</p>
     </footer>
-
 </body>
-
 </html>
